# printify-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tag-version.yml
docs/: EXAMPLES.md  PRINTIFY_API_INTEGRATION.md  QUICK_REFERENCE.md
printify/: __init__.py  cache.py  client.py  shop.py
printify/models/: __init__.py
printify/services/: __init__.py  order_service.py  product_service.py  shipping_service.py
printify_client/: __init__.py  cache.py  client.py  exceptions.py  shop.py
printify_client/models/: __init__.py  order.py  product.py  shipping.py  shop.py
printify_client/services/: __init__.py  order_service.py  product_service.py  shipping_service.py
tests/: __init__.py  test_cache.py  test_client.py  test_models.py  test_services.py  test_shop.py
tests/fixtures/: api_responses.json
