[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printify-client"
dynamic = ["version"]
description = "Python library for Printify API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Printify Python Contributors"}
]
keywords = ["printify", "api", "print-on-demand", "ecommerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/printify/printify-client"
Documentation = "https://github.com/printify/printify-client#readme"
Repository = "https://github.com/printify/printify-client"
Issues = "https://github.com/printify/printify-client/issues"

[tool.setuptools]
packages = ["printify_client", "printify_client.models", "printify_client.services"]

[tool.setuptools.package-data]
printify_client = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "printify_client.__version__"}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.ruff.lint]
select = ['F', 'E', 'I']
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'
extend-select = ['W', 'N', 'ANN', 'B', 'A', 'C4', 'PERF', 'RUF']
ignore = ['I001', 'N999', 'B905', 'PERF203', 'RUF013']
fixable = ['ALL']
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = []
known-local-folder = []
known-third-party = []
section-order = [
    'future',
    'standard-library',
    'third-party',
    'first-party',
    'local-folder',
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.format]
quote-style = 'double'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'
preview = false
docstring-code-format = true

[tool.pyright]
pythonVersion = '3.12'
typeCheckingMode = 'basic'
# enable subset of 'strict'
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUntypedNamedTuple = false
reportUnusedImport = true
# disable subset of 'basic'
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false
exclude = ['docs', 'setup.py', 'venv']

[tool.sqlfluff.core]
output_line_length = 120
max_line_length = 120
runaway_limit = 10
processes = -1
large_file_skip_byte_limit = 30000
templater = 'jinja'

[tool.sqlfluff.indentation]
indent_unit = 'space'
indent_space_size = 4
indented_joins = true
indented_ctes = true
indented_using_on = true

[tool.sqlfluff.layout.type.comma]
spacing_before = 'touch'
line_position = 'leading'

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = 'lower'
extended_capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.identifier]
extended_capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = 'lower'
